[package]
name = "chip8"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]

[lib]
name = "c8lib"
path = "src/lib.rs"

[[bin]]
name = "c8e"
path = "c8e/main.rs"

[dependencies]
error-chain = "0.10.0"
slog = "1.5.2"
slog-term = "1.5.0"
slog-stdlog = "1.1.0"
clap = "2.22.0"
env_logger = "0.4.2"
rand = "0.3"
minifb = "0.9.0"
